Fixed: Wrong toolbar bottom height on mobile devices

--- a/ui/apps/themes/components/toolbar.less
+++ b/ui/apps/themes/components/toolbar.less
@@ -156,7 +156,7 @@
 
 .bottom-toolbar.bottom-toolbar-visible .window-content { bottom: @toolbar-height; }
 .chromeless-window .window-body:not(.mobile-toolbar-visible) { bottom: 0;}
-.chromeless-window .window-body.mobile-toolbar-visible { bottom: @toolbar-height; }
+.chromeless-window .window-body.mobile-toolbar-visible { bottom: @mobile-toolbar-height; }
 .chromeless-window.header-bottom .window-body:not(.mobile-toolbar-visible) { bottom: 64px; }
 
 .smartphone .mobile-navbar {
